// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Slide > styles > should render with backward animation styles 1`] = `
<div>
  <div
    class="_base_43177c"
    style="--slide-width: 800px; --slide-stack-order: 2; --slide-transform-x: 0%; --slide-animation-duration: 640ms;"
  >
    <div
      class="_inner_43177c"
    >
      <div>
        content
      </div>
    </div>
  </div>
</div>
`;

exports[`Slide > styles > should render with default styles 1`] = `
<div>
  <div
    class="_base_43177c"
    style="--slide-width: 100%; --slide-stack-order: 0; --slide-transform-x: 0%; --slide-animation-duration: 640ms;"
  >
    <div
      class="_inner_43177c"
    >
      <div>
        content
      </div>
    </div>
  </div>
</div>
`;

exports[`Slide > styles > should render with forward animation styles 1`] = `
<div>
  <div
    class="_base_43177c"
    style="--slide-width: 800px; --slide-stack-order: 2; --slide-transform-x: 0%; --slide-animation-duration: 640ms;"
  >
    <div
      class="_inner_43177c _animate-in_43177c _animate-out_43177c"
    >
      <div>
        content
      </div>
    </div>
  </div>
</div>
`;
